slightly slower stats period; json msg in ws; send speed; fix premature break in ws loop
cargo fix

--- a/web/index.css
+++ b/web/index.css
@@ -54,6 +54,8 @@ h1 {
 	font-size: 24px;
 
 	pointer-events: none;
+
+	white-space: pre-line;
 }
 
 .file-hover {
